/*
Copyright Â© 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbcasbinRule;

option go_package = "upms/proto/pbcasbinRule";

import "pbcommon/pbcommon.proto";


message CasbinRuleModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;

  string casbinRuleName = 4;
  CasbinRuleType casbinRuleType = 5;
  string v0 = 6;
  string v1 = 7;
  string v2 = 8;
  string v3 = 9;
  string v4 = 10;
  string v5 = 11;
  string v6 = 12;
  string v7 = 13;
  string v8 = 14;
}

enum CasbinRuleType {
  CASBIN_RULE_TYPE_NONE = 0;
  HTTP = 1;
}

message FindCasbinRuleArgs{
  pbcommon.PageInfo pageInfo = 1;
  CasbinRuleModel query = 2;
}

message FindCasbinRuleReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  CasbinRuleModel data =3;
  repeated CasbinRuleModel list = 4;
  int64 total = 5;
}

service CasbinRule {
  rpc CreateCasbinRule(CasbinRuleModel) returns(pbcommon.CommonResult){}
  rpc UpdateCasbinRule(CasbinRuleModel) returns(pbcommon.CommonResult){}
  rpc DeleteCasbinRule(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindCasbinRuleById(pbcommon.IdArgs) returns(FindCasbinRuleReply){}
  rpc FindCasbinRuleList(FindCasbinRuleArgs) returns(FindCasbinRuleReply){}
}